--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "outDir": "transpiled"
+    "outDir": "build",
+    "exclude": [
+      "node_modules",
+      "build"
+    ]
   }
 }
