--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,7 @@
     "removeComments": false,
     "noImplicitAny": false,
     "outDir": "build",
-    "exclude": [
-      "node_modules",
-      "build"
-    ]
+    "diagnostics": true,
+    "pretty": true
   }
 }
